snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.module.sha512
fccaf68395c301acbf57d61915445a8959a565ee1cea59fa2310dd3cd20c03e3984dd1ecf0491ff2f441fbb9151ef6213ed9d5e228b8d5641ce8f0f52ca93d1a